2014-09-26 Massimo Manghi <mxmanghi@apache.org>
    * tests/apachetest/apachetest.tcl: phasing out TclX calls as the web server seems not to respond
    to QUIT signals sent by Tclx's kill. Likewise in apachetcl the httpd binary is used to control
    execution

2014-09-26 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.c: Add user scripts handling. Fixed bug in per dir and per user
    scripts when virtual interpreters are off.
    * src/experimental/mod_rivet.h: add macros for user configuration flags handling
    * src/experimental/apache_config.h: add user configuration handling
    * tests/inspect.test: trimming tests in order to make them independent for the final CR. 
    Carriage returns should now be appended when needed
    * tests/virtualhost.test: adding returned string space class character trimming
    * tests/rivet.test: changing localhost into 127.0.0.1 as it breaks in certain cases
    
2014-09-08 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.c: handling per dir configurations that have no Rivet directives
    in them, thus leaving the 'path' field NULL.
    * src/experimental/TclWebapache.c: reenabling CACHE_SIZE and CACHE_FREE in the environment
    array

2014-09-07 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.h: add field path to rivet_server_conf. This field carries
    a copy of the 'path' field in cmd_parms. This field is NULL for global and <VirtualHost>
    sections whereas for <Directory> sections points to the argument (the pattern matching
    a certain directory)
    * src/experimental/mod_rivet.c: handling of rdc->path to store configuration scripts
    * src/experimental/rivet_prefork_mpm.c: defining request_init and request_cleanup in the
    thread private data
    * src/experimental/apache_config.h: handling of the path field in rivet_server_conf

2014-09-05 Massimo Manghi <mxmanghi@apache.org>